// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders disabled Link 1`] = `
<DocumentFragment>
  <a
    aria-disabled="true"
    class="link link--disabled"
    href="/about"
    tabindex="-1"
  >
    About
  </a>
</DocumentFragment>
`;

exports[`Link component renders valid Link 1`] = `
<DocumentFragment>
  <a
    class="link"
    href="/about"
  >
    About
  </a>
</DocumentFragment>
`;
